--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: logger
+name: log_message
 description: Global logging system
 version: 0.1.0
 
@@ -11,5 +11,5 @@ environment:
 #   path: ^1.8.0
 
 dev_dependencies:
-  test: ^1.16.0
-  very_good_analysis: 3.0.1
+  test: ^1.21.6
+  very_good_analysis: ^3.1.0
