--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,11 @@ version: 0.1.0
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.18.0-271.4.beta <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 # dependencies:
 #   path: ^1.8.0
 
 dev_dependencies:
-  test: ^1.21.6
-  very_good_analysis: ^3.1.0
+  test: ^1.21.5
+  very_good_analysis: ^3.0.1
