--allow-unrelated-histories

--- a/.github/workflows/merge-and-test.yml
+++ b/.github/workflows/merge-and-test.yml
@@ -20,7 +20,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git remote add upstream "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
           git fetch upstream
-          git merge upstream/master
+          git merge upstream/master --allow-unrelated-histories
 
       # Get a list of all test files
       - name: Get test files
