--- a/.github/workflows/merge-and-test.yml
+++ b/.github/workflows/merge-and-test.yml
@@ -4,12 +4,9 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    needs: [Dart]
     steps:
       - uses: actions/checkout@v3
-
-      - uses: dart-lang/setup-dart@v1.3
-        with:
-          sdk: "2.19.0-146.2.beta"
 
       - name: Install dependencies
         run: dart pub get
