--- a/.github/workflows/merge-and-test.yml
+++ b/.github/workflows/merge-and-test.yml
@@ -25,22 +25,19 @@ jobs:
       - name: Install dependencies
         run: dart pub get
 
-  #lint:
-  #  runs-on: ubuntu-latest
-  #  needs: build
-  #  steps:
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
+      - name: Pull master
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git remote add upstream "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+          git fetch upstream
+          git merge upstream/master --allow-unrelated-histories
+          git pull
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
-        run: dart analyze
+        run: dart analyze --fatal-warnings
 
-  #test:
-  #  runs-on: ubuntu-latest
-  #  needs: build
-  #  steps:
       # Get a list of all test files
       - name: Get test files
         run: tests=$(find test -name "*_test.dart")
@@ -52,17 +49,14 @@ jobs:
         run: dart pub run test ${{ steps.test_files.outputs.tests }}
         shell: bash
 
-  #coverage:
-  #  runs-on: ubuntu-latest
-  #  needs: build
-  #  steps:
-      - name: Coverage information
+      # Commit and push the changes to master if all the previous steps did not fail
+      - name: Commit and push
+        if: success()
         run: |
-          dart pub global activate coverage
-          dart pub global run coverage:test_with_coverage
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/lcov.info
+          git add .
+          # Get the commit message of the original commit
+          commit_message=$(git log --format=%B -n 1 ${{ github.event.before }})
+          # Append a hint that the changes were tested in CI
+          commit_message="$commit_message (tested in CI)"
+          git commit -m "$commit_message"
+          git push upstream HEAD:master
