--- a/.github/workflows/merge-and-test.yml
+++ b/.github/workflows/merge-and-test.yml
@@ -10,7 +10,7 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    if: github.event.ref != 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
 
@@ -32,9 +32,6 @@ jobs:
           git remote add upstream "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
           git fetch upstream
           git fetch origin
-          
-      - name: Ensure current branch is not master
-        if: github.event.ref == 'refs/heads/master'
           
       - name: Check out current branch
         run: git checkout ${{ github.event.before }}
