--- a/.github/workflows/merge-and-test.yml
+++ b/.github/workflows/merge-and-test.yml
@@ -31,7 +31,7 @@ jobs:
         run: git checkout ${{ steps.extract_branch.outputs.branch }}
         
       - name: Pull master
-        run: git merge master --allow-unrelated-histories
+        run: git merge upstream/master --allow-unrelated-histories
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
