--- a/.github/workflows/merge-and-test.yml
+++ b/.github/workflows/merge-and-test.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Commit and push
         if: success()
         run: |
-          git add .
+          # git add .
           # Get the commit message of the original commit
           commit_message=$(git log --format=%B -n 1 ${{ github.event.before }})
           # Append a hint that the changes were tested in CI
