--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -69,29 +69,30 @@ jobs:
 
       - name: Check if code coverage is above 95% and branch is not a protected one
         run: |
-            coverage=$(grep -oP 'lines......\K\d+(\.\d+)?' coverage/lcov.info)
-            branch_name=${{ github.ref }}
-            author_name=$(git log -1 --pretty=format:'%an')
-            author_email=$(git log -1 --pretty=format:'%ae')
-            author_date=$(git log -1 --pretty=format:'%ad')
-            changed_files=$(git diff --name-only HEAD~1)
-            
-            if (( $(echo "$coverage > 95" | bc -l) )) && ! echo "$branch_name" | grep -q "master\|alpha\|beta\|stable\|release" && ! echo "$commit_message" | grep -q 'Merge'; then
-              echo "Conditions met, creating pull request"
-              - name: Run the Action
-                uses: devops-infra/action-pull-request@v0.5.3
-                with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  source_branch: ${{github.ref}}
-                  target_branch: master
-                  title: "$COMMIT_MESSAGE (Automated Pull Request with ${coverage}% coverage)"
-                  body: "**Commit**: ${{ github.sha }}\n\n$COMMIT_MESSAGE \n\n*This pull request was automatically generated because the code coverage is above 95%.*\n\n**Author**: ${author_name} (${author_email})\n\n**Date**: ${author_date}\n\n**Changed files**: ${changed_files}\n\n*This pull request was automatically generated.*"
-                  label: great-coverage, automated
-                  reviewer: ${author_name}
-                  assignee: ${author_name}
-                  ignore_users: "dependabot"
-                  allow_no_diff: false
-                  get_diff: false
-            else
-              echo "Conditions not met, skipping pull request creation"
-            fi
+          coverage=$(grep -oP 'lines......\K\d+(\.\d+)?' coverage/lcov.info)
+          branch_name=${{ github.ref }}
+          author_name=$(git log -1 --pretty=format:'%an')
+          author_email=$(git log -1 --pretty=format:'%ae')
+          author_date=$(git log -1 --pretty=format:'%ad')
+          changed_files=$(git diff --name-only HEAD~1)
+          create_pr=false
+          if (( $(echo "$coverage > 95" | bc -l) )) && ! echo "$branch_name" | grep -q "master\|alpha\|beta\|stable\|release" && ! echo "$commit_message" | grep -q 'Merge'; then
+            echo "Conditions met, creating pull request"
+            create_pr=true
+          else
+            echo "Conditions not met, skipping pull request creation"
+          fi
+      - name: Run the Action
+        if: ${{ env.create_pr }} == 'true'
+        uses: devops-infra/action-pull-request@v0.5.3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          source_branch: ${{github.ref}}
+          target_branch: master
+          title: "$COMMIT_MESSAGE (Automated Pull Request with ${coverage}% coverage)"
+          body: "**Commit**: ${{ github.sha }}\n\n$COMMIT_MESSAGE \n\n*This pull request was automatically generated because the code coverage is above 95%.*\n\n**Author**: ${author_name} (${author_email})\n\n**Date**: ${author_date}\n\n**Changed files**: ${changed_files}\n\n*This pull request was automatically generated.*"
+          label: great-coverage, automated
+          reviewer: ${author_name}
+          assignee: ${author_name}
+
+
