--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -79,6 +79,7 @@ jobs:
           if [[ $lines_total -eq 0 ]]
           then
             echo "Coverage percentage: 0%"
+          exit 0
           else
             # Calculate the coverage percentage
             coverage=$(echo "scale=2; $lines_executed / $lines_total * 100" | bc)
@@ -98,7 +99,7 @@ jobs:
           author_name=$(git log -1 --pretty=format:'%an')
           author_email=$(git log -1 --pretty=format:'%ae')
           author_date=$(git log -1 --pretty=format:'%ad')
-          changed_files=$(git diff --name-only HEAD~1)
+          changed_files=$(git diff --name-only HEAD)
           create_pr=false
           if (( $(echo "$coverage > 95" | bc -l) )) && ! echo "$branch_name" | grep -q "master\|alpha\|beta\|stable\|release" && ! echo "$commit_message" | grep -q 'Merge'; then
             echo "Conditions met, creating pull request"
