--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -107,14 +107,20 @@ jobs:
           else
             echo "Conditions not met, skipping pull request creation"
           fi
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+
       - name: Run the Action
         if: ${{ env.create_pr }} == 'true'
         uses: devops-infra/action-pull-request@v0.5.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: ${{github.ref}}
+          source_branch: ${{ steps.extract_branch.outputs.branch }}
           target_branch: master
-          title: "$COMMIT_MESSAGE (Automated Pull Request with ${coverage}% coverage)"
+          title: "{{$COMMIT_MESSAGE}} (Automated Pull Request with ${coverage}% coverage)"
           body: "**Commit**: ${{ github.sha }}\n\n$COMMIT_MESSAGE \n\n*This pull request was automatically generated because the code coverage is above 95%.*\n\n**Author**: ${author_name} (${author_email})\n\n**Date**: ${author_date}\n\n**Changed files**: ${changed_files}\n\n*This pull request was automatically generated.*"
           label: great-coverage, automated
           reviewer: ${author_name}
