--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -108,6 +108,12 @@ jobs:
             echo "Conditions not met, skipping pull request creation"
           fi
 
+      - name: Download Pull Request template
+        shell: bash
+        run: |
+            mkdir -p .tmp
+            curl -LsS https://raw.githubusercontent.com/devops-infra/.github/master/PULL_REQUEST_TEMPLATE.md -o .tmp/PULL_REQUEST_TEMPLATE.md
+
       - name: Extract branch name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
@@ -118,12 +124,9 @@ jobs:
         uses: devops-infra/action-pull-request@v0.5.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: ${{ steps.extract_branch.outputs.branch }}
-          target_branch: master
-          title: "{{$COMMIT_MESSAGE}} (Automated Pull Request with ${coverage}% coverage)"
-          body: "**Commit**: ${{ github.sha }}\n\n$COMMIT_MESSAGE \n\n*This pull request was automatically generated because the code coverage is above 95%.*\n\n**Author**: ${author_name} (${author_email})\n\n**Date**: ${author_date}\n\n**Changed files**: ${changed_files}\n\n*This pull request was automatically generated.*"
-          label: great-coverage, automated
-          reviewer: ${author_name}
-          assignee: ${author_name}
+          assignee: ${{ github.actor }}
+          label: great-coverage, auto-merge
+          template: .tmp/PULL_REQUEST_TEMPLATE.md
+          get_diff: true
 
 
