--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,21 @@
 name: log_message
 description: Global logging system
-version: 0.1.0
+version: 0.2.0
 
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  freezed_annotation: any
+  json_annotation: any
 
 dev_dependencies:
+  build_runner: any
+  clock: ^1.1.1
+  freezed: any
+  json_serializable: any
   mutation_test: ^1.3.2
   test: ^1.22.2
   very_good_analysis: ^3.1.0
-dependencies:
-  clock: ^1.1.1
