--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -10,13 +10,15 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        sdk: [ "3.1", "stable", "beta" ]
     steps:
       - uses: actions/checkout@v3
 
       - uses: dart-lang/setup-dart@v1.3
         with:
-          sdk: "2.19.0-146.2.beta"
+          sdk: ${{ matrix.sdk }}
 
       - name: Install dependencies
         run: dart pub get
