--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        sdk: [ "3.1", "stable", "beta" ]
+        sdk: [ "stable", "beta" ]
     steps:
       - uses: actions/checkout@v3
 
