ci: allow my private packages
(cherry picked from commit 0823cb11a132a1d9760f46e746039e0e69111dc9)

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -8,11 +8,14 @@ name: Dart
 on: [push, pull_request]
 
 jobs:
-  build:
+  test_and_coverage:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Auth GitHub
+        run: git config --global url."https://${{ secrets.MANU_GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
       - uses: dart-lang/setup-dart@v1.3
         with:
