--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,6 +16,13 @@ include: package:very_good_analysis/analysis_options.yaml
 
 # Uncomment the following section to specify additional rules.
 
+analyzer:
+  errors:
+    invalid_annotation_target: ignore
+  exclude:
+    - "**/**.g.dart"
+    - "**/**.freezed.dart"
+
 # linter:
 #   rules:
 #     - camel_case_types
