--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   crypt:
     git:
       url: https://github.com/Marc-R2/encrypt_dart.git
+      ref: 8cf39659
   freezed_annotation: any
   json_annotation: any
 
