--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   crypt:
     git:
       url: https://github.com/Marc-R2/encrypt_dart.git
-      ref: 4b1fe3b9
+      ref: "22540803"
   freezed_annotation: any
   json_annotation: any
 
